# openglraytracing

./: .gitmodules  CMakeLists.txt  README.md  compile_commands.json
.github/workflows/: cmake.yml
RELEASE/: .ninja_deps  .ninja_log  CMakeCache.txt  OpenGLRaytracing  build.ninja  cmake_install.cmake  compile_commands.json  imgui.ini
src/: GLItems.cpp  GLItems.h  glad.c  main.cpp
src/include/glad/: glad.h
src/shaders/: ComputeShader.comp  ComputeShader.comp.glsl
